fixed something... position: fixed;z-index:2; color each

--- a/hide_javascript/index.css
+++ b/hide_javascript/index.css
@@ -1,8 +1,7 @@
 body{
-  height: 100%;
   width: 100%;
-  padding: 0;
-  margin: 0;
+  margin: 0 0;
+  padding: 250px 0 0 0;
   background-color: #523737;
 }
 
@@ -19,6 +18,9 @@ h1{
   color:yellow;
 }
 
+.timer{
+  position:relative;
+}
 .timer .js-greetings{
   color:pink;
 }
@@ -26,12 +28,12 @@ h1{
 .js-clock{
   color:white;
 }
-.timer{
-  height: 100vh;
+.timer .timer-body{
   display:flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction:column;
+  background-color: #523737;
 }
 
 .timer a {
@@ -50,6 +52,22 @@ h1{
 .todo-div{
   width:100%;
   padding-top: 30px;
+}
+
+.timer .timer-body{
+  display:flex;
+  justify-content:center;
+  margin:0;
+  padding-bottom:20px;
+  width:100%;
+  position:fixed;
+  z-index:2;
+  top:0;
+}
+
+.todo-div{
+  padding-top:30px;
+  background-color: #523737;
 }
 
 .js-toDoList{
